--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div className="flex justify-between items-center h-16">
                 {/* Logo */}
                 <div className="flex-shrink-0">
-                  <img src={pathLogo} alt="Path Consulting Logo" className="h-10 w-auto" />
+                  <img src={pathLogo} alt="Path Consulting Logo" className="h-32 md:h-40 w-auto" />
                 </div>
                 {/* Desktop Navigation */}
                 <nav className="hidden md:flex space-x-8">
@@ -260,7 +260,7 @@
                 </p>
                 <div className="space-y-6">
                   <a
-                    href="https://forms.google.com"
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSfgqE2x_c9-wvk7mbqWUy_y9RB_4aXPEEIneGct5gFCSaFACw/viewform"
                     target="_blank"
                     rel="noopener noreferrer"
                     className="inline-block bg-maroon text-white px-12 py-5 rounded-lg text-lg font-semibold font-sans hover:bg-maroon-dark transform hover:scale-105 transition-all duration-200 shadow-lg hover:shadow-xl"
@@ -288,7 +288,7 @@
                   <h4 className="text-lg font-semibold mb-4 font-serif">Connect With Us</h4>
                   <div className="space-y-3">
                     <a href="#" className="text-gray-300 hover:text-white transition-colors font-sans">Instagram @pathconsulting</a>
-                    <a href="mailto:info@pathconsulting.org" className="text-gray-300 hover:text-white transition-colors font-sans">Email Us</a>
+                    <a href="mailto:info@pathconsulting.org" className="text-gray-300 hover:text-white transition-colors font-sans"></a>
                   </div>
                 </div>
                 <div>
