--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div className="flex justify-between items-center h-16">
                 {/* Logo */}
                 <div className="flex-shrink-0">
-                  <img src={pathLogo} alt="Path Consulting Logo" className="h-32 md:h-40 w-auto" />
+                  <img src={pathLogo} alt="Path Consulting Logo" className="h-10 w-auto" />
                 </div>
                 {/* Desktop Navigation */}
                 <nav className="hidden md:flex space-x-8">
