--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
               </div>
               <div className="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
-                <p className="font-sans">© {new Date().getFullYear()} Path Consulting. All rights reserved.</p>
+                <p className="font-sans">© {new Date().getFullYear()} Path Consulting 2025 </p>
               </div>
             </div>
           </footer>
