--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
           <section id="apply" className="py-20 bg-white">
             <div className="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
               <div className="bg-cream p-12 rounded-2xl shadow-xl border border-maroon-20">
-                <h2 className="text-4xl md:text-5xl font-bold text-maroon mb-6 font-serif">Apply Now</h2>
+                <h2 className="text-4xl md:text-5xl font-bold text-maroon mb-6 font-serif">Our Application</h2>
                 <p className="text-xl text-gray-700 mb-8 max-w-2xl mx-auto leading-relaxed font-sans">
-                  Become part of a dynamic team that's shaping the future of political strategy and policy development.
+                  Become part of one of the premier consulting clubs at CMC.
                 </p>
                 <div className="space-y-6">
                   <a
