--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                 <div className="relative">
                   <div className="aspect-square bg-gray-100 rounded-xl overflow-hidden shadow-xl">
                     <img
-                      src="https://placehold.co/600x600/800000/FFFFFF?text=Policy+Research"
-                      alt="Collaborative policy research team"
-                      className="w-full h-full object-cover"
+                      src={pathLogo}
+                      alt="Path Consulting Logo"
+                      className="w-full h-full object-contain p-6"
                     />
                   </div>
                   <div className="absolute -bottom-6 -right-6 w-32 h-32 bg-maroon rounded-full opacity-20"></div>
