--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
       // Mock data for timeline
       const timelineData = [
-        { date: 'September 1', title: 'Applications Open', description: 'Submit your application through our Google Form' },
-        { date: 'September 15', title: 'Info Sessions', description: 'Attend virtual info sessions to learn more about Path Consulting' },
-        { date: 'October 1', title: 'Interviews Begin', description: 'Schedule and complete your interview with our team' },
-        { date: 'October 15', title: 'Decisions Announced', description: "We'll notify applicants of their status" }
+        { date: 'September 9', title: 'Written Applications Due', description: 'Submit your application through our Google Form' },
+        { date: 'September 11', title: 'Technical Interviews', description: '' },
+        { date: 'September 13-15', title: 'Behavioral Interviews', description: '' },
+        { date: 'September 16', title: ' Final Decisions Announced', description: "We'll notify applicants of their status" }
       ];
 
       // Scroll to section
