--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Path Consulting</title>
+  <!-- Icons (browsers & iOS share bubble) -->
+<link rel="icon" href="/pathLogo.png" type="image/png">
+<link rel="apple-touch-icon" href="/pathLogo.png">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.cmcpath.com/">
+
+<!-- Open Graph (used by iMessage, Slack, FB, etc.) -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Path Consulting">
+<meta property="og:title" content="Path Consulting">
+<meta property="og:description" content="Policy & AI strategy, research, and execution.">
+<meta property="og:url" content="https://www.cmcpath.com/">
+<meta property="og:image" content="https://www.cmcpath.com/pathLogo.png">
+<meta property="og:image:alt" content="Path Consulting logo">
+
+<!-- Twitter (many apps use this too) -->
+<meta name="twitter:card" content="summary"> <!-- 'summary' suits square logos -->
+<meta name="twitter:title" content="Path Consulting">
+<meta name="twitter:description" content="Policy & AI strategy, research, and execution.">
+<meta name="twitter:image" content="https://www.cmcpath.com/pathLogo.png">
   <!-- Include Tailwind via CDN for utility classes -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Extend Tailwind's config to define custom colors and fonts -->
