--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     Apply Now →
                   </a>
                   <p className="text-gray-600 font-sans">
-                    Applications open until September 15th. Don't miss your chance to join!
+                    Written application open until September 9th. Don't miss your chance to join!
                   </p>
                 </div>
               </div>
