--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 
       // Mock data for timeline
       const timelineData = [
-        { date: 'September 9', title: 'Written Applications Due', description: 'Submit your application through our Google Form' },
-        { date: 'September 11', title: 'Technical Interviews', description: '' },
-        { date: 'September 13-15', title: 'Behavioral Interviews', description: '' },
-        { date: 'September 16', title: ' Final Decisions Announced', description: "We'll notify applicants of their status" }
+      { date: 'September 9', title: 'Written Applications Due', description: 'Submit your application through our Google Form' },
+      { date: 'September 12, 13', title: 'Technical Interviews', description: '' },
+      { date: 'September 17, 18', title: 'Behavioral Interviews', description: '' },
+      { date: 'September 19', title: ' Final Decisions Announced', description: "We'll notify applicants of their status" }
       ];
 
       // Scroll to section
