--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
                   <div className="bg-gray-50 p-8 rounded-xl shadow-lg">
                     <h3 className="text-2xl font-bold text-maroon mb-4 font-serif">Who We Are</h3>
                     <p className="text-gray-700 leading-relaxed font-sans">
-                      Path Consulting is a student-led organization at Claremont McKenna College that provides strategic consulting services to political candidates and policymakers. Our mission is to bridge the gap between academic research and real-world political strategy.
+                      Path Consulting is a student-led organization at Claremont McKenna College that provides strategic consulting services to organizations and policymakers. Our mission is to bridge the gap between academic research and real-world political strategy.
                     </p>
                   </div>
                   <div className="bg-gray-50 p-8 rounded-xl shadow-lg">
-                    <h3 className="text-2xl font-bold text-maroon mb-4 font-serif">Our Non-Partisan Ethos</h3>
+                    <h3 className="text-2xl font-bold text-maroon mb-4 font-serif">Our Bi-Partisan Ethos</h3>
                     <p className="text-gray-700 leading-relaxed font-sans">
                       We believe in serving all political ideologies equally. Our approach is grounded in evidence-based analysis and objective research, ensuring that our recommendations are driven by data rather than partisan bias.
                     </p>
