--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   <div className="bg-gray-50 p-8 rounded-xl shadow-lg">
                     <h3 className="text-2xl font-bold text-maroon mb-4 font-serif">Our Work</h3>
                     <p className="text-gray-700 leading-relaxed font-sans">
-                      Members work on diverse projects including policy analysis, campaign strategy development, voter outreach planning, and legislative impact assessments. We collaborate with both local and national political figures to create meaningful change.
+                      Members work on diverse projects including policy analysis, strategic consulting, internal policy advisory, and more. We collaborate with both local and national political organizations to create meaningful change.
                     </p>
                   </div>
                 </div>
