--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </p>
                   </div>
                   <div className="bg-gray-50 p-8 rounded-xl shadow-lg">
-                    <h3 className="text-2xl font-bold text-maroon mb-4 font-serif">Our Bi-Partisan Ethos</h3>
+                    <h3 className="text-2xl font-bold text-maroon mb-4 font-serif">Our Non-Partisan Ethos</h3>
                     <p className="text-gray-700 leading-relaxed font-sans">
                       We believe in serving all political ideologies equally. Our approach is grounded in evidence-based analysis and objective research, ensuring that our recommendations are driven by data rather than partisan bias.
                     </p>
