--- a/index.html
+++ b/index.html
@@ -540,12 +540,12 @@
                       </div>
                       <div>
                         <a href="https://www.cusd.claremont.edu" target="_blank" rel="noopener noreferrer" className="hover:text-maroon transition-colors link-underline">
-                          City of Claremont & Regional School Districts
+                          Claremont Unified School District
                         </a>
                       </div>
                       <div>
                         <a href="https://touchstonemh.org" target="_blank" rel="noopener noreferrer" className="hover:text-maroon transition-colors link-underline">
-                          Community Mental Health Organizations
+                          Touchstone Mental Health
                         </a>
                       </div>
                     </div>
